# stgpx

./: .gitignore  README.md  pyproject.toml
src/stgpx/: stgpx.py  stpgx.py
